# energy_automation

./: .env.example  .gitignore  README.md  pyproject.toml
analyses/: README.md  dump_sim.py  emporia_vs_pw3.py  pv_forecast_vs_recorded.py  pw3_probe.py  pw3_tedapi_probe.py  pw3_writeprobe.py  replay_dump_action.py  replay_soc.py  replay_step.py  replay_surplus_action.py
data/tariff/: PGE_NBT26_EEC_Values_2026_long.csv
docs/: flow.dot
scripts/: com.elec_auto.serve.plist  restart.sh  setup_macos.sh
src/elec_auto/: actions.py  cli.py  config.py  control.py  controller.py  emporia.py  flow.py  forecast.py  nest.py  nws.py  policy.py  powerwall.py  pw3_cloud.py  runtime_config.py  samples.py  solar.py  solcast.py  state.py  timewindow.py  web.py
tests/: test_actions.py  test_controller.py  test_flow.py  test_forecast.py  test_nws.py  test_policy.py  test_powerwall.py  test_pw3_cloud.py  test_replay.py  test_replay_actions.py  test_samples.py  test_scenarios.py  test_solar.py  test_solcast_schedule.py  test_state.py
tests/fixtures/: replay_2026_05_17_dump.py  replay_2026_05_17_surplus.py  replay_2026_05_18.py
